[workspace]
resolver = "2"
members = [
    "crates/ray-core",
    "crates/ray-gcs",
    "crates/ray-raylet",
    "crates/ray-object-store",
    "crates/ray-scheduler",
    "crates/ray-runtime",
    "crates/ray-py",
]

# Include ray-py only when explicitly requested via `--workspace` or `-p ray-py`
default-members = [
    "crates/ray-core",
    "crates/ray-gcs",
    "crates/ray-raylet",
    "crates/ray-object-store",
    "crates/ray-scheduler",
    "crates/ray-runtime",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/example/ray-rust"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC / Protobuf
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"
protox = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Shared memory
shared_memory = "0.12"

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module"] }

# Internal crates
ray-core = { path = "crates/ray-core" }
ray-gcs = { path = "crates/ray-gcs" }
ray-raylet = { path = "crates/ray-raylet" }
ray-object-store = { path = "crates/ray-object-store" }
ray-scheduler = { path = "crates/ray-scheduler" }
ray-runtime = { path = "crates/ray-runtime" }
