[package]
name = "ray-object-store"
version.workspace = true
edition.workspace = true

[dependencies]
ray-core = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
shared_memory = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protox = { workspace = true }
