[package]
name = "ray-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
ray-core = { workspace = true }
ray-gcs = { workspace = true }
ray-raylet = { workspace = true }
ray-object-store = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
